--- a/logisim_battles/templates/main/app.html
+++ b/logisim_battles/templates/main/app.html
@@ -6,6 +6,7 @@
 
     <title>Logisim Battles</title>
 
+    <script src="/static/js/logisim.js" defer></script>
     <script src="/static/js/game.js" defer></script>
     <link rel="stylesheet" type="text/css" href="/static/css/game.css">
     <link rel="stylesheet" type="text/css" href="/static/css/basics.css">
@@ -15,7 +16,6 @@
         <button onclick="toggleSelectGate('AND')">AND</button>
         <button onclick="toggleSelectGate('OR')">OR</button>
         <button onclick="toggleSelectGate('NOT')">NOT</button>
-        <button onclick="toggleSelectGate('NOT')">WIRE</button>
     </div>
     <canvas id="game"></canvas>
 </body>
