--- a/logisim_battles/templates/main/app.html
+++ b/logisim_battles/templates/main/app.html
@@ -7,15 +7,19 @@
     <title>Logisim Battles</title>
 
     <script src="/static/js/logisim.js" defer></script>
+    <script src="/static/js/simulation.js" defer></script>
     <script src="/static/js/game.js" defer></script>
     <link rel="stylesheet" type="text/css" href="/static/css/game.css">
     <link rel="stylesheet" type="text/css" href="/static/css/basics.css">
 </head>
 <body>
     <div class="toolbar">
+        <button onclick="toggleSelectGate('INPUT')">INPUT</button>
+        <button onclick="toggleSelectGate('OUTPUT')">OUTPUT</button>
         <button onclick="toggleSelectGate('AND')">AND</button>
         <button onclick="toggleSelectGate('OR')">OR</button>
         <button onclick="toggleSelectGate('NOT')">NOT</button>
+        <button onclick="simulate()">Test</button>
     </div>
     <canvas id="game"></canvas>
 </body>
