--- a/logisim_battles/templates/main/app.html
+++ b/logisim_battles/templates/main/app.html
@@ -6,7 +6,7 @@
 
     <title>Logisim Battles</title>
 
-    <script src="/static/js/logisim.js" defer></script>
+    <script src="/static/js/editor.js" defer></script>
     <script src="/static/js/simulation.js"></script>
     <script src="/static/js/game.js" defer></script>
     <link rel="stylesheet" type="text/css" href="/static/css/game.css">
