Added registration and login

--- a/logisim_battles/templates/main/index.html
+++ b/logisim_battles/templates/main/index.html
@@ -17,8 +17,8 @@
 
     <a href="/editor">Editor</a>
     {% if user %}
-        <a href="/play">Play</a>
-        <a href="/profile">Profile</a>
+        <a href="/app/play">Play</a>
+        <a href="/app/profile">Profile</a>
     {% else %}
         <a href="/auth/register">Register</a>
         <a href="/auth/login">Login</a>
