--- a/logisim_battles/templates/auth/register.html
+++ b/logisim_battles/templates/auth/register.html
@@ -17,13 +17,13 @@
 
     <form method="POST">
         <h3>Username</h3>
-        <input type="text" maxlength="30" placeholder="Username...">
+        <input type="text" name="username" maxlength="30" placeholder="Username...">
 
         <h3>Email address</h3>
-        <input type="text" placeholder="Email address...">
+        <input type="text" name="email" placeholder="Email address...">
 
         <h3>Password</h3>
-        <input type="password" placeholder="Password...">
+        <input type="password" name="password" placeholder="Password...">
 
         <button type="submit">Register</button>
     </form>
