--- a/logisim_battles/templates/app/battles.html
+++ b/logisim_battles/templates/app/battles.html
@@ -11,7 +11,7 @@
 
     <form method="POST">
         <h3>Join battle</h3>
-        <input type="text" maxlength="5" placeholder="battle">
+        <input type="text" name="battle_id" maxlength="5" placeholder="battle">
         <button type="submit">Join</button>
     </form>
 
