Added battle authentication

--- a/logisim_battles/templates/app/queue.html
+++ b/logisim_battles/templates/app/queue.html
@@ -22,5 +22,7 @@
     {% if player.id == battle.owner_id %}
         <button>Start battle</button>
     {% endif %}
+
+    <button onclick="leaveBattle()">Leave</button>
 </body>
 </html>
