Added room leaving

--- a/logisim_battles/templates/app/queue.html
+++ b/logisim_battles/templates/app/queue.html
@@ -9,6 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.min.js" crossorigin="anonymous"></script>
     <script src="/static/js/gameSocket.js" defer></script>
     <script src="/static/js/queue.js"></script>
+    <script src="/static/js/basics.js"></script>
     <script>
         const battle = {{ battle|tojson }};
         const player = {{ player|tojson }};
