Fixed simulation bug

--- a/logisim_battles/templates/app/battle.html
+++ b/logisim_battles/templates/app/battle.html
@@ -23,6 +23,7 @@
         <button onclick="toggleSelectGate('OR')">OR</button>
         <button onclick="toggleSelectGate('NOT')">NOT</button>
         <button onclick="simulate()">Simulate</button>
+        <button onclick="submit()">Submit</button>
     </div>
 
     <div class="truthtable" id="truthtable"></div>
