Updated game environment

--- a/logisim_battles/templates/app/battle.html
+++ b/logisim_battles/templates/app/battle.html
@@ -24,6 +24,7 @@
         <button onclick="toggleSelectGate('NOT')">NOT</button>
         <button onclick="simulate()">Simulate</button>
         <button onclick="submit()">Submit</button>
+        <span id="timer">00:00</span>
     </div>
 
     <div class="truthtable" id="truthtable"></div>
