--- a/logisim_battles/static/css/game.css
+++ b/logisim_battles/static/css/game.css
@@ -15,6 +15,10 @@ div.truthtable {
     position: fixed;
     right: 0;
     display: flex;
+    padding: 10px;
+    border-left: 2px solid var(--bg-sec);
+    border-bottom: 2px solid var(--bg-sec);
+    background-color: var(--bg-pri);
 }
 
 div.output {
@@ -22,10 +26,10 @@ div.output {
 }
 div.title {
     text-align: center;
-    border-bottom: 2px solid black;
+    border-bottom: 3px solid black;
 }
 div.cell {
-    padding: 2.5px 5px;
+    padding: 2.5px 10px;
     color: white;
 }
 div.cell.off {
