Added server side circuit validation

--- a/logisim_battles/templates/app/battle.html
+++ b/logisim_battles/templates/app/battle.html
@@ -8,6 +8,7 @@
 
     <script src="/static/js/editor.js" defer></script>
     <script src="/static/js/simulation.js"></script>
+    <script src="/static/js/basics.js"></script>
     <script src="/static/js/game.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/css/game.css">
     <link rel="stylesheet" type="text/css" href="/static/css/basics.css">
