--- a/logisim_battles/templates/auth/login.html
+++ b/logisim_battles/templates/auth/login.html
@@ -11,10 +11,10 @@
 
     <form method="POST">
         <h3>Username</h3>
-        <input type="text" placeholder="Username or email address...">
+        <input type="text" name="user" placeholder="Username or email address...">
 
         <h3>Password</h3>
-        <input type="password" placeholder="Password...">
+        <input type="password" name="password" placeholder="Password...">
 
         <button type="submit">Login</button>
     </form>
