--- a/logisim_battles/templates/app/queue.html
+++ b/logisim_battles/templates/app/queue.html
@@ -7,7 +7,7 @@
     <title>Logisim Battles</title>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.min.js" crossorigin="anonymous"></script>
-    <script src="/static/js/gameSocket.js" defer></script>
+    <script src="/static/js/gameSocket.js"></script>
     <script src="/static/js/queue.js"></script>
     <script src="/static/js/basics.js"></script>
     <script>
