--- a/logisim_battles/templates/app/battle.html
+++ b/logisim_battles/templates/app/battle.html
@@ -32,6 +32,7 @@
     </div>
 
     <div class="truthtable" id="truthtable"></div>
+    <div id="alerts"></div>
 
     <canvas id="game"></canvas>
 </body>
