--- a/logisim_battles/templates/app/results.html
+++ b/logisim_battles/templates/app/results.html
@@ -7,11 +7,9 @@
     <title>Logisim Battles</title>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.min.js" crossorigin="anonymous"></script>
-    <script src="/static/js/editor.js" defer></script>
-    <script src="/static/js/simulation.js"></script>
     <script src="/static/js/gameSocket.js"></script>
     <script src="/static/js/basics.js"></script>
-    <script src="/static/js/game.js"></script>
+    <script src="/static/js/queue.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/css/game.css">
     <link rel="stylesheet" type="text/css" href="/static/css/basics.css">
     <script>
@@ -21,9 +19,11 @@
 </head>
 <body>
     {% for _player in battle.players %}
-        <div class="entry">
+        <div class="entry" id="{{ _player.id }}">
             {{ _player.username }} {% if player.id == _player.id %}(You){% endif %} Time: {{ _player.time }} Gates: {{ _player.gates }} Score: {{ _player.score }}
         </div>
     {% endfor %}
+
+    <button onclick="leaveBattle()">Leave</button>
 </body>
 </html>
