Updated wire connector connectivity Added edit gate outline

--- a/logisim_battles/static/css/game.css
+++ b/logisim_battles/static/css/game.css
@@ -16,6 +16,10 @@ div.toolbar {
     height: 40px;
     background-color: var(--bg-pri);
     border-bottom: solid 2px var(--bg-sec);
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 0px 10px;
 }
 
 div.truthtable {
