--- a/logisim_battles/templates/app/battle.html
+++ b/logisim_battles/templates/app/battle.html
@@ -24,6 +24,10 @@
     <div class="stage" id="queue">
         <h1>Awaiting start</h1>
 
+        <p>
+            Share this battle code with your players: <code>{{ battle.id }}</code>
+        </p>
+
         <div id="queue-player-list"></div>
 
         {% if player.id == battle.owner_id %}
