--- a/logisim_battles/templates/auth/login.html
+++ b/logisim_battles/templates/auth/login.html
@@ -11,7 +11,7 @@
 
     <form method="POST">
         <h3>Username</h3>
-        <input type="text" name="user" placeholder="Username or email address...">
+        <input type="text" name="user" placeholder="Username">
 
         <h3>Password</h3>
         <input type="password" name="password" placeholder="Password...">
