--- a/logisim_battles/static/css/game.css
+++ b/logisim_battles/static/css/game.css
@@ -22,6 +22,13 @@ div.toolbar {
     padding: 0px 10px;
 }
 
+button.gate {
+    display: none;
+}
+button.gate.active {
+    display: inline-block;
+}
+
 div.truthtable {
     position: fixed;
     right: 0;
