--- a/logisim_battles/templates/app/battle.html
+++ b/logisim_battles/templates/app/battle.html
@@ -40,9 +40,10 @@
     <div class="stage" id="battle">
         <div class="toolbar">
             <button onclick="editMode()">Edit</button>
-            <button onclick="toggleSelectGate('AND')">AND</button>
-            <button onclick="toggleSelectGate('OR')">OR</button>
-            <button onclick="toggleSelectGate('NOT')">NOT</button>
+            <button class="gate" onclick="toggleSelectGate('AND')" id="AND-btn">AND</button>
+            <button class="gate" onclick="toggleSelectGate('OR')" id="OR-btn">OR</button>
+            <button class="gate" onclick="toggleSelectGate('NOT')" id="NOT-btn">NOT</button>
+            <button class="gate" onclick="toggleSelectGate('XOR')" id="XOR-btn">XOR</button>
             <button onclick="simulate()">Simulate</button>
             <button onclick="test()">Test</button>
             <button onclick="submit()">Submit</button>
