Added XOR gates

--- a/logisim_battles/templates/main/editor.html
+++ b/logisim_battles/templates/main/editor.html
@@ -19,6 +19,7 @@
         <button onclick="toggleSelectGate('AND')">AND</button>
         <button onclick="toggleSelectGate('OR')">OR</button>
         <button onclick="toggleSelectGate('NOT')">NOT</button>
+        <button onclick="toggleSelectGate('XOR')">XOR</button>
         <button onclick="simulate()">Simulate</button>
     </div>
     <canvas id="game"></canvas>
