--- a/logisim_battles/templates/app/battle.html
+++ b/logisim_battles/templates/app/battle.html
@@ -50,7 +50,11 @@
             <span id="timer">00:00</span>
         </div>
 
-        <div class="truthtable" id="truthtable"></div>
+        <div class="truthtable" id="truthtable">
+            <div class="test" id="test-column">
+                <div class="title">Pass</div>
+            </div>
+        </div>
         <div id="alerts"></div>
 
         <canvas id="game"></canvas>
