--- a/logisim_battles/templates/app/new_battle.html
+++ b/logisim_battles/templates/app/new_battle.html
@@ -20,7 +20,7 @@
         </div>
         
         <div>
-            <select name="inputs">
+            <select name="outputs">
                 <option value="1">1</option>
                 <option value="2" selected>2</option>
                 <option value="3">3</option>
