--- a/logisim_battles/templates/main/editor.html
+++ b/logisim_battles/templates/main/editor.html
@@ -22,6 +22,8 @@
         <button onclick="toggleSelectGate('XOR')">XOR</button>
         <button onclick="simulate()">Simulate</button>
     </div>
-    <canvas id="game"></canvas>
+    <div class="canvasContainer">
+        <canvas id="game"></canvas>
+    </div>
 </body>
 </html>
