Added toggleable inputs Fixed wire splitting on both ends Added XOR to battle circuit validation

--- a/logisim_battles/templates/app/new_battle.html
+++ b/logisim_battles/templates/app/new_battle.html
@@ -15,6 +15,7 @@
                 <option value="1">1</option>
                 <option value="2" selected>2</option>
                 <option value="3">3</option>
+                <option value="4">4</option>
             </select>
             Amount of inputs
         </div>
@@ -39,7 +40,7 @@
             XOR
         </div>
         
-        <button type="submit">Start</button>
+        <button type="submit">Create</button>
     </form>
 </body>
 </html>
