--- a/bit_battles/templates/app/battle.html
+++ b/bit_battles/templates/app/battle.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Logisim Battles</title>
+    <title>Bit Battles</title>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.min.js" crossorigin="anonymous"></script>
     <script src="/static/js/editor.js" defer></script>
@@ -13,12 +13,12 @@
     <script src="/static/js/basics.js"></script>
     <script src="/static/js/queue.js"></script>
     <script src="/static/js/game.js"></script>
-    <link rel="stylesheet" type="text/css" href="/static/css/game.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/basics.css">
     <script>
         battle = {{ battle|tojson }};
         const player = {{ player|tojson }};
     </script>
+    <link rel="stylesheet" type="text/css" href="/static/css/game.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/basics.css">
 </head>
 <body>
     <div class="stage" id="queue">
