--- a/bit_battles/templates/app/battles.html
+++ b/bit_battles/templates/app/battles.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Logisim Battles</title>
+    <title>Bit Battles</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/static/css/basics.css">
 </head>
 <body>
-    <h1>Logisim battles</h1>
+    <h1>Bit Battles</h1>
 
     <form method="POST">
         <h3>Join battle</h3>
