--- a/bit_battles/templates/app/new_battle.html
+++ b/bit_battles/templates/app/new_battle.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends "app/app_base.html" %}
 
-    <title>Logisim Battles</title>
-</head>
-<body>
+{% block content %}
     <h1>New battle</h1>
 
     <form method="POST">
@@ -42,5 +36,4 @@
         
         <button type="submit">Create</button>
     </form>
-</body>
-</html>
+{% endblock %}
