--- a/bit_battles/templates/app/user.html
+++ b/bit_battles/templates/app/user.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends "app/app_base.html" %}
 
-    <title>Logisim Battles</title>
-</head>
-<body>
+{% block content %}
     <h1>{{ user.username }}</h1>
     {% for statistic in statistics %}
         <div>
@@ -15,5 +9,4 @@
             Your score: {{ statistic.score }}
         </div>
     {% endfor %}
-</body>
-</html>
+{% endblock %}
