--- a/bit_battles/templates/auth/register.html
+++ b/bit_battles/templates/auth/register.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Logisim Battles</title>
+    <title>Bit Battles</title>
 </head>
 <body>
-    <h1>Login</h1>
+    <h1>Register</h1>
 
     <form method="POST">
         <h3>Username</h3>
-        <input type="text" name="user" placeholder="Username">
-
+        <input type="text" name="username" maxlength="30" placeholder="Username...">
+        
         <h3>Password</h3>
         <input type="password" name="password" placeholder="Password...">
 
-        <button type="submit">Login</button>
+        <button type="submit">Register</button>
     </form>
 
-    No account yet? <a href="/auth/register">Register!</a>
+    Already have an account? <a href="/auth/login">Login!</a>
 </body>
 </html>
