--- a/bit_battles/templates/main/editor.html
+++ b/bit_battles/templates/main/editor.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Logisim Battles</title>
+    <title>Bit Battles</title>
 
     <script src="/static/js/editor.js" defer></script>
     <script src="/static/js/simulation.js"></script>
