--- a/bit_battles/templates/main/index.html
+++ b/bit_battles/templates/main/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Logisim Battles</title>
+    <title>Bit Battles</title>
 </head>
 <body>
-    <h1>Logisim battles</h1>
+    <h1>Bit Battles</h1>
 
     <a href="/editor">Editor</a>
     {% if user %}
