Added font and organised html

--- a/bit_battles/templates/app/battles.html
+++ b/bit_battles/templates/app/battles.html
@@ -1,17 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends "app/app_base.html" %}
 
-    <title>Bit Battles</title>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/static/css/basics.css">
-</head>
-<body>
+{% block content %}
     <h1>Bit Battles</h1>
 
     <form method="POST">
@@ -21,5 +10,4 @@
     </form>
 
     <button onclick="window.location.href='/app/battle/new/'">New battle</button>
-</body>
-</html>
+{% endblock %}
