--- a/bit_battles/templates/auth/login.html
+++ b/bit_battles/templates/auth/login.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends "auth/auth_base.html" %}
 
-    <title>Bit Battles</title>
-</head>
-<body>
+{% block content %}
     <h1>Login</h1>
 
     <form method="POST">
@@ -20,5 +14,4 @@
     </form>
 
     No account yet? <a href="/auth/register">Register!</a>
-</body>
-</html>
+{% endblock %}
