--- a/bit_battles/templates/main/editor.html
+++ b/bit_battles/templates/main/editor.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Bit Battles</title>
+    <title>Bit Battles - Free editor</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&display=swap" rel="stylesheet">
+    
+    <link rel="stylesheet" type="text/css" href="/static/css/basics.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/game.css">
 
     <script src="/static/js/editor.js" defer></script>
     <script src="/static/js/simulation.js"></script>
-    <link rel="stylesheet" type="text/css" href="/static/css/game.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/basics.css">
 </head>
 <body>
     <div class="toolbar">
