--- a/bit_battles/templates/main/index.html
+++ b/bit_battles/templates/main/index.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends "main/main_base.html" %}
 
-    <title>Bit Battles</title>
-</head>
-<body>
+{% block content %}
     <h1>Bit Battles</h1>
 
     <a href="/editor">Editor</a>
@@ -17,5 +11,4 @@
         <a href="/auth/register">Register</a>
         <a href="/auth/login">Login</a>
     {% endif %}
-</body>
-</html>
+{% endblock %}
