Added public and private battles

--- a/bit_battles/templates/app/new_battle.html
+++ b/bit_battles/templates/app/new_battle.html
@@ -33,6 +33,10 @@
             <input type="checkbox" name="XOR">
             XOR
         </div>
+        <div>
+            <input type="checkbox" name="private">
+            Invite only
+        </div>
         
         <button type="submit">Create</button>
     </form>
