--- a/bit_battles/templates/app/battles.html
+++ b/bit_battles/templates/app/battles.html
@@ -4,10 +4,10 @@
     <h1>Bit Battles</h1>
 
     <form method="POST">
-        <h3>Join battle</h3>
         <input type="text" name="battle_id" maxlength="5" placeholder="battle">
         <button type="submit">Join</button>
     </form>
 
     <button onclick="window.location.href='/app/battle/new/'">New battle</button>
+    <button onclick="window.location.href='/app/battle/random/'">Join random battle ({{ battles }})</button>
 {% endblock %}
