--- a/bit_battles/templates/app/user.html
+++ b/bit_battles/templates/app/user.html
@@ -1,13 +1,14 @@
 {% extends "app/app_base.html" %}
 
 {% block content %}
+    <a href="/app/battles">Battles</a>
     <h1>{{ user.username }}</h1>
 
     {% for statistic, values in statistics.items() %}
         <h2>{{ statistic}}</h2>
         {% for battle in values %}  
             <div>
-                {% if battle.winner %}You won this battle.{% endif %}
+                {% if battle.winner %}You won this battle.{% elif not battle.passed %}You did not finish this battle.{% endif %}
                 Your score: {{ battle.score }}
             </div>
         {% endfor %}
