--- a/bit_battles/static/css/game.css
+++ b/bit_battles/static/css/game.css
@@ -9,6 +9,10 @@ body {
 .stage.active {
     display: block;
 }
+.stage.results {
+    height: 100vh;
+    overflow-y: auto;
+}
 
 div.toolbar {
     position: fixed;
