--- a/bit_battles/templates/app/battle.html
+++ b/bit_battles/templates/app/battle.html
@@ -65,7 +65,7 @@
         <canvas id="game"></canvas>
     </div>
 
-    <div class="stage" id="results">
+    <div class="stage results" id="results">
         <div id="results-player-list"></div>
         {% if player.id == battle.owner_id %}
             <button onclick="restartGame()">Restart</div>
