--- a/bit_battles/templates/app/user.html
+++ b/bit_battles/templates/app/user.html
@@ -2,7 +2,11 @@
 
 {% block content %}
     <a href="/app/battles">Battles</a>
-    <h1>{{ user.username }}</h1>
+    
+    <div class="user">
+        <img src="https://api.dicebear.com/9.x/shapes/svg?seed={{ user.username }}&backgroundColor=b6e3f4&size=32" alt="{{ user.username }}'s avatar">
+        <h1>{{ user.username }}</h1>
+    </div>
 
     {% for statistic, values in statistics.items() %}
         <h2>{{ statistic}}</h2>
