--- a/bit_battles/templates/app/battle.html
+++ b/bit_battles/templates/app/battle.html
@@ -68,7 +68,7 @@
     <div class="stage results" id="results">
         <div id="results-player-list"></div>
         {% if player.id == battle.owner_id %}
-            <button onclick="restartGame()">Restart</div>
+            <button onclick="restartGame()">New round</div>
         {% endif %}
     </div>
 </body>
