--- a/bit_battles/templates/main/index.html
+++ b/bit_battles/templates/main/index.html
@@ -4,7 +4,8 @@
     <h1>Bit Battles</h1>
 
     <a href="/editor">Editor</a>
-    {% if current_user %}
+
+    {% if current_user.username %}
         <a href="/app/battles">Battles</a>
         <a href="/app/user/{{ current_user.username }}">Profile</a>
     {% else %}
