Fixed small issues

--- a/bit_battles/templates/auth/login.html
+++ b/bit_battles/templates/auth/login.html
@@ -13,5 +13,6 @@
         <button type="submit">Login</button>
     </form>
 
-    No account yet? <a href="/auth/register">Register!</a>
+    No account yet? <a href="/auth/register">Register!</a> <br>
+    Or just play around in the <a href="/app/editor">editor</a>
 {% endblock %}
