--- a/bit_battles/templates/auth/register.html
+++ b/bit_battles/templates/auth/register.html
@@ -13,5 +13,6 @@
         <button type="submit">Register</button>
     </form>
 
-    Already have an account? <a href="/auth/login">Login!</a>
+    Already have an account? <a href="/app/battles">Login!</a> <br>
+    Or just play around in the <a href="/app/editor">editor</a>
 {% endblock %}
