Fixed 500 on submission due to wrong error format

--- a/bit_battles/templates/app/battles.html
+++ b/bit_battles/templates/app/battles.html
@@ -11,7 +11,7 @@
                 <div class="front"></div>
                 <img class="content" src="https://api.dicebear.com/9.x/shapes/svg?seed={{ winners.1.username }}&backgroundColor=b6e3f4&size=96" alt="{{ winners.1.username }}'s avatar">
                 <div class="content player">
-                    <h4>[{{ winners.1.score }}] {{ winners.1.username }}</h4>
+                    <h4><a href="/app/user/{{ winners.1.username }}">[{{ winners.1.score }}] {{ winners.1.username }}</a></h4>
                     <span>{{ winners.1.relative_timestamp }}<span>
                 </div>
             </div>
@@ -20,7 +20,7 @@
                 <div class="front"></div>
                 <img class="content" src="https://api.dicebear.com/9.x/shapes/svg?seed={{ winners.0.username }}&backgroundColor=b6e3f4&size=96" alt="{{ winners.0.username }}'s avatar">
                 <div class="content player">
-                    <h4>[{{ winners.0.score }}] {{ winners.0.username }}</h4>
+                    <h4><a href="/app/user/{{ winners.0.username }}">[{{ winners.0.score }}] {{ winners.0.username }}</a></h4>
                     <span>{{ winners.0.relative_timestamp }}<span>
                 </div>
             </div>
@@ -29,7 +29,7 @@
                 <div class="front"></div>
                 <img class="content" src="https://api.dicebear.com/9.x/shapes/svg?seed={{ winners.2.username }}&backgroundColor=b6e3f4&size=96" alt="{{ winners.2.username }}'s avatar">
                 <div class="content player">
-                    <h4>[{{ winners.2.score }}] {{ winners.2.username }}</h4>
+                    <h4><a href="/app/user/{{ winners.2.username }}">[{{ winners.2.score }}] {{ winners.2.username }}</a></h4>
                     <span>{{ winners.2.relative_timestamp }}<span>
                 </div>
             </div>
