--- a/bit_battles/static/css/battles.css
+++ b/bit_battles/static/css/battles.css
@@ -68,6 +68,10 @@
     top: -10px;
 }
 
+.position .player {
+    pointer-events: all;
+}
+
 .position.first .player {
     top: 21.5%;
     width: 250px;
