Added illegal wire checking for gates

--- a/bit_battles/templates/app/battle.html
+++ b/bit_battles/templates/app/battle.html
@@ -44,7 +44,8 @@
 
     <div class="stage" id="battle">
         <div class="toolbar">
-            <button onclick="editMode()">Edit</button>
+            <button onclick="debugMode()">🖐</button>
+            <button onclick="editMode()">🔧</button>
             <button class="gate" onclick="toggleSelectGate('AND')" id="AND-btn">AND</button>
             <button class="gate" onclick="toggleSelectGate('OR')" id="OR-btn">OR</button>
             <button class="gate" onclick="toggleSelectGate('NOT')" id="NOT-btn">NOT</button>
