--- a/bit_battles/templates/app/editor.html
+++ b/bit_battles/templates/app/editor.html
@@ -18,7 +18,8 @@
 </head>
 <body>
     <div class="toolbar">
-        <button onclick="editMode()">Edit</button>
+        <button onclick="debugMode()">🖐</button>
+        <button onclick="editMode()">🔧</button>
         <button onclick="toggleSelectGate('INPUT')">INPUT</button>
         <button onclick="toggleSelectGate('OUTPUT')">OUTPUT</button>
         <button onclick="toggleSelectGate('AND')">AND</button>
